[package]
name = "exchange"
version = "0.1.0"
description = "Manages token trading through automated market maker"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "exchange"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0" 